# C_UnitTest-QiuckSort-assert-By_cmocka-

./: CMakeLists.txt  Main.c  README.md
Algorithm/Headers/Quick_Sort/: Quick_Sort.h
Algorithm/Sources/: CMakeLists.txt
Algorithm/Sources/Quick_Sort/: CMakeLists.txt  Quick_Sort.c
Test/: CMakeLists.txt  Main.c
Test/Headers/: Header.h  Test_QuickSort.h
Test/Sources/: Test_QuickSort.c
